examples/negative/name_errors/L1/4_const_same_scope.ob
MODULE ConstSameScope;

CONST x = 3;
      x = 4;

END ConstSameScope.
